<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Airmonitor</string>
    <string name="toolbar_logo">Logo de la aplicación</string>
    <string name="sign_in">Inicia sesión</string>
    <string name="welcome_back">Bienvenido</string>
    <string name="subtitle">Inicia sesión con tu correo electrónico</string>
    <string name="introduce_tu_correo">Introduce tu correo</string>
    <string name="correo">Correo</string>
    <string name="introduce_la_contrase_a">Introduce la contraseña</string>
    <string name="password">Contraseña</string>
    <string name="politica_de_privacidad">Politica de privacidad</string>
    <string name="has_olvidado_tu_contrase_a">Has olvidado tu contraseña?</string>
    <string name="contrase_a_olvidada">contraseña olvidada?</string>
    <string name="continuar">Continuar</string>
    <string name="no_tienes_cuenta">No tienes cuenta?</string>
    <string name="inicia_sesi_n">Inicia sesión</string>
    <string name="reg_strate">Regístrate</string>
    <string name="Regístarte">Regístrate</string>
    <string name="SubtituloRegistro">El primer paso para acceder a todas las ventajas es introducir tu dirección de correo electrónico a continuación.</string>
    <string name="registrarse">Registrarse</string>
    <string name="crea_tu_cuenta">Crea tu cuenta</string>
    <string name="ya_tienes_cuenta">¿Ya tienes cuenta?</string>
    <string name="iniciar_sesi_n">Iniciar sesión</string>
    <string name="introduce_el_nombre_de_usuario">Introduce el nombre de usuario</string>
    <string name="introduce_de_nuevo_la_contrase_a">Introduce de nuevo la contraseña</string>
    <string name="subtitulo_landing">¿Tienes cuenta? Inicia sesión con tu email.  \nSi no, regístarte para continuar:</string>
    <string name="hola">Hola, </string>
    <string name="settings">Settings</string>
    <string-array name="measurement_types">
        <item>Todos</item>
        <item>Temperatura</item>
        <item>Ozono</item>
    </string-array>

</resources>