<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">


    <TextView
        android:id="@+id/botonRegistro"
        android:layout_width="0dp"
        android:layout_height="24dp"
        android:layout_marginStart="8dp"
        android:text="@string/iniciar_sesi_n"
        android:textColor="@color/action_item"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/textView5"
        app:layout_constraintStart_toEndOf="@+id/textView5"
        app:layout_constraintTop_toTopOf="@+id/textView5"
        app:layout_constraintVertical_bias="0.61" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="90dp"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="50dp"
        android:text="@string/ya_tienes_cuenta"
        android:textColor="@color/secondary_item"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonLogin" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/imageBack"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="20dp"
        android:src="@drawable/ic_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/textSignIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/registrarse"
        android:textColor="@color/secondary_item"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/imageBack"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/imageBack" />

    <TextView
        android:id="@+id/textTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:gravity="center"
        android:text="@string/crea_tu_cuenta"
        android:textColor="@color/primary_name"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/textSignIn" />


    <TextView
        android:id="@+id/textSubtitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="40dp"
        android:gravity="center"
        android:text="@string/SubtituloRegistro"
        android:textColor="@color/secondary_item"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textTitle" />


    <LinearLayout
        android:id="@+id/layoutEmailInput"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/background_input"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        app:layout_constraintTop_toBottomOf="@id/textSubtitle"
        tools:layout_editor_absoluteX="24dp">


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:autofillHints="emailAddress"
            android:background="@null"
            android:hint="@string/introduce_tu_correo"
            android:imeOptions="actionNext"
            android:inputType="textEmailAddress"
            android:textColor="@color/primary_name"
            android:textColorHint="@color/secondary_item"
            android:textSize="16sp" />


        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/imageEmailIcon"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/ic_email"
            android:tint="@color/secondary_item" />

    </LinearLayout>


    <TextView
        android:id="@+id/textEmailHint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:background="@color/white"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:text="@string/correo"
        android:textColor="@color/secondary_item"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@id/layoutEmailInput"
        app:layout_constraintStart_toStartOf="@id/layoutEmailInput"
        app:layout_constraintTop_toTopOf="@id/layoutEmailInput" />


    <LinearLayout
        android:id="@+id/layoutPasswordInput"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/background_input"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        app:layout_constraintTop_toBottomOf="@id/layoutEmailInput">


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/passw"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:autofillHints="password"
            android:background="@null"
            android:hint="@string/introduce_la_contrase_a"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:textColor="@color/primary_name"
            android:textColorHint="@color/secondary_item"
            android:textSize="16sp" />


        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/imagePasswordIcon"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/ic_lock"
            android:tint="@color/secondary_item" />

    </LinearLayout>


    <TextView
        android:id="@+id/textPasswordHint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:background="@color/white"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:text="@string/password"
        android:textColor="@color/secondary_item"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/layoutPasswordInput"
        app:layout_constraintStart_toStartOf="@+id/layoutPasswordInput"
        app:layout_constraintTop_toTopOf="@+id/layoutPasswordInput" />


    <LinearLayout
        android:id="@+id/layoutRepetirContraseña"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/background_input"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        tools:layout_editor_absoluteY="461dp"
        app:layout_constraintTop_toBottomOf="@id/layoutPasswordInput">


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/actualpassword"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:autofillHints="password"
            android:background="@null"
            android:hint="@string/introduce_de_nuevo_la_contrase_a"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:textColor="@color/primary_name"
            android:textColorHint="@color/secondary_item"
            android:textSize="16sp" />


        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/ic_lock"
            android:tint="@color/secondary_item" />

    </LinearLayout>


    <LinearLayout
        android:id="@+id/layoutNombreUsuario"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/background_input"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layoutRepetirContraseña">


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:autofillHints="password"
            android:background="@null"
            android:hint="@string/introduce_el_nombre_de_usuario"
            android:imeOptions="actionDone"
            android:inputType="text"
            android:textColor="@color/primary_name"
            android:textColorHint="@color/secondary_item"
            android:textSize="16sp" />


        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/porfafunciona"
            android:tint="@color/secondary_item" />

    </LinearLayout>

    <TextView
        android:id="@+id/textUsuarioHint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:background="@color/white"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:text="Usuario"
        android:textColor="@color/secondary_item"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/layoutNombreUsuario"
        app:layout_constraintStart_toStartOf="@+id/layoutNombreUsuario"
        app:layout_constraintTop_toTopOf="@+id/layoutNombreUsuario" />

    <TextView
        android:id="@+id/textRepetirContraseñaHint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:background="@color/white"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:text="Repetir contraseña"
        android:textColor="@color/secondary_item"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/layoutRepetirContraseña"
        app:layout_constraintStart_toStartOf="@+id/layoutRepetirContraseña"
        app:layout_constraintTop_toTopOf="@+id/layoutRepetirContraseña" />

    <CheckBox
        android:id="@+id/checkbox_terms"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginStart="10dp"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@+id/textView6"
        app:layout_constraintEnd_toStartOf="@+id/textView6"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/buttonLogin"
        app:layout_constraintTop_toTopOf="@+id/textView6" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginBottom="14dp"
        android:text="He leído y acepto los "
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/buttonLogin"
        app:layout_constraintEnd_toStartOf="@+id/textView8"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/checkbox_terms" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:onClick="privacidad"
        android:text="términos y política de privacidad"
        android:textColor="#3F51B5"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/textView6"
        app:layout_constraintEnd_toEndOf="@+id/buttonLogin"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/textView6"
        app:layout_constraintTop_toTopOf="@+id/textView6" />

    <Button
        android:id="@+id/buttonLogin"
        android:layout_width="0dp"
        android:layout_height="52dp"
        android:layout_marginTop="90dp"
        android:backgroundTint="@color/action_item"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:text="Continuar"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/layoutPasswordInput"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/layoutPasswordInput"
        app:layout_constraintTop_toBottomOf="@+id/layoutNombreUsuario" />


</androidx.constraintlayout.widget.ConstraintLayout>